--- a/javascript_testing.html
+++ b/javascript_testing.html
@@ -3,17 +3,56 @@
 <html>
   <head>
     <title>Learning JavaScript</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <!-- <script src="js/main.js"> </script> -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="css/javascript_testing.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <body>
-      <div class="header">
-        <h1>Learning Javascript</h1>
-      </p>with Kelly</p>
+
+      <div class="container">
+      <section class="hero">
+        <div class="hero-body">
+          <p class="title">
+            Welcome to My Training
+          </p>
+          <p class="subtitle">
+            Something new every day
+          </p>
+        </div>
+      </section>
+
+
+      <div class="card">
+        <header class="card-header">
+          <p class="card-header-title">
+            Learning Javascript
+          </p>
+          <button class="card-header-icon" aria-label="more options">
+            <span class="icon">
+              <i class="fas fa-angle-down" aria-hidden="true"></i>
+            </span>
+          </button>
+        </header>
+        <div class="card-content">
+          <div class="content">
+            This is where Kelly learns to do things.
+          </div>
+        </div>
+        <footer class="card-footer">
+          <a href="#" class="card-footer-item" onclick="showAlert()">Click Me</a>
+        </footer>
+      </div>
     </div>
 
-    <div class="container">
-
-    </div>
+    <!-- <div class="card">
+        <div class="card-content">
+            <p class="title is-4">Learning Javascript</p>
+            <p class="subtitle is-6">with Kelly</p>
+          </div>
+          <footer class="card-footer" align="center">
+            <button type="button" class="button is-primary is-light is-normal" onclick="showAlert()">Click Here</button>
+          </footer>
+        </div> -->
 
     <script>
       // Number
@@ -26,9 +65,17 @@
       var colors = ['red','blue','orange'];
       colors.push('purple');
       // Object
-      console.log(colors[2]);
+
+      function showAlert(){
+        var numbers = [2, 11, 1987];
+        for(var i = 0; i < numbers.length; i++) {
+          alert(numbers[i]);
+        }
+
+      }
+
 
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     </body>
 </html>
